# debugger

./: .gitignore  CMakeLists.txt  README.md
include/: app_state.hpp  breakpoint_hook.hpp  dependency.hpp  disassembler.hpp  elf_header.hpp  elf_reader.hpp  elf_runner.hpp  loader.hpp  ptrace_utils.hpp  status.hpp
include/ui/: code.hpp  file.hpp  function.hpp  info.hpp  multi_trace.hpp  single_trace.hpp  string.hpp  tab_controller.hpp
src/: app_state.cpp  breakpoint_hook.cpp  disassembler.cpp  elf_reader.cpp  elf_runner.cpp  loader.cpp  main.cpp
src/ui/: code.cpp  file.cpp  function.cpp  multi_trace.cpp  single_trace.cpp  string.cpp  tab_controller.cpp
test/: main.cpp  program  stripped
